[gd_scene load_steps=21 format=2]

[ext_resource path="res://Clear.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Kenney Pixel Square.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/SpaceBackgrounds/1.Space_640x360 - Back1.png" type="Texture" id=5]
[ext_resource path="res://Assets/SpaceBackgrounds/10.Space_640x360 - Stars.png" type="Texture" id=6]
[ext_resource path="res://Assets/SpaceBackgrounds/5.Space_640x360 - Nebula1.png" type="Texture" id=7]
[ext_resource path="res://UI/HealthBar.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Sound/DrumAndBass3.ogg" type="AudioStream" id=9]
[ext_resource path="res://UI/BuffUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://Game.gd" type="Script" id=11]
[ext_resource path="res://Assets/Sound/DrumAndBass2.ogg" type="AudioStream" id=12]
[ext_resource path="res://PointCounter.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Sprites/BarrierWall.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39216.1, 6765.84 )

[sub_resource type="Animation" id=2]
resource_name = "FadeOut"
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -22.237, -80.0 ]
}

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 97, 0, 97, 92, 0, 92 )

[sub_resource type="TileSet" id=6]
0/name = "BarrierWall.png 0"
0/texture = ExtResource( 14 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 1, 3, 97, 92 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 5 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Node2D" type="Node2D"]
script = ExtResource( 11 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 640, 360 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 5 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 640, 360 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 6 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 1 )
motion_mirroring = Vector2( 640, 360 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 7 )
centered = false

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 496.409, 362.857 )
start_hp = 100
max_health = 100
clamp_to_window_borders = false
number_of_bullets = 3

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -496.409, -362.857 )
anchor_mode = 0

[node name="Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 542.457, -140.746 )
rotate_speed = 0
shooter_timer_wait_time = 0.15
spawn_point_count = 8
radius = 20

[node name="Boss" parent="." instance=ExtResource( 3 )]
position = Vector2( 392.551, 125.126 )
rotate_speed = 0
shooter_timer_wait_time = 0.15
spawn_point_count = 8
radius = 20
points = 1000

[node name="Sprite" parent="Boss" index="0"]
animation = "Boss"
frame = 3

[node name="EnemyRed" parent="." instance=ExtResource( 3 )]
position = Vector2( 210.117, -106.805 )
rotate_speed = 0
shooter_timer_wait_time = 0.15
spawn_point_count = 8
radius = 20
points = 100

[node name="Sprite" parent="EnemyRed" index="0"]
animation = "alternate"
frame = 6

[node name="HealthBar" parent="." instance=ExtResource( 8 )]
margin_left = 0.138794
margin_top = 332.407
margin_right = 40.1388
margin_bottom = 372.407

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -22.237
autoplay = true
mix_target = 1

[node name="BuffUI" parent="." instance=ExtResource( 10 )]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 90.1089, -12773.8 )
shape = SubResource( 1 )

[node name="FadeOut" type="AnimationPlayer" parent="."]
anims/FadeOut = SubResource( 2 )

[node name="BossMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -20.8

[node name="Clear" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="Popup" type="Popup" parent="Clear"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Clear/Popup"]
margin_left = 165.405
margin_top = 60.27
margin_right = 484.405
margin_bottom = 244.27
custom_fonts/font = SubResource( 3 )
text = "Clear
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Clear/Popup"]
margin_left = 272.762
margin_top = 178.319
margin_right = 376.762
margin_bottom = 208.319
custom_fonts/font = SubResource( 4 )
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointCounter" parent="." instance=ExtResource( 13 )]

[node name="CanvasLayer" type="CanvasLayer" parent="PointCounter"]

[node name="pointlabel" type="Label" parent="PointCounter/CanvasLayer"]
margin_left = 552.091
margin_top = 4.794
margin_right = 592.091
margin_bottom = 18.794
text = "Points"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 6 )
cell_size = Vector2( 100, 100 )
collision_layer = 32
format = 1
tile_data = PoolIntArray( -6553615, 0, 0, -6553614, 0, 0, -6553613, 0, 0, -6553612, 0, 0, -6553611, 0, 0, -6553610, 0, 0, -6553609, 0, 0, -6553608, 0, 0, -6553607, 0, 0, -6553606, 0, 0, -6553605, 0, 0, -6553604, 0, 0, -6553603, 0, 0, -6553602, 0, 0, -6553601, 0, 0, -6619136, 0, 0, -6619135, 0, 0, -6619134, 0, 0, -6619133, 0, 0, -6619132, 0, 0, -6619131, 0, 0, -6619130, 0, 0, -6619129, 0, 0, -6619128, 0, 0, -6619127, 0, 0, -6619126, 0, 0, -6619125, 0, 0, -6619124, 0, 0, -6619123, 0, 0, -6619122, 0, 0, -6619121, 0, 0, -6619120, 0, 0, -6619119, 0, 0, -6619118, 0, 0, -6619117, 0, 0, -6619116, 0, 0, -6619115, 0, 0, -6619114, 0, 0, -6619113, 0, 0, -6619112, 0, 0, -6488079, 0, 0, -6553576, 0, 0, -6422543, 0, 0, -6488040, 0, 0, -6357007, 0, 0, -6422504, 0, 0, -6291471, 0, 0, -6356968, 0, 0, -6225935, 0, 0, -6291432, 0, 0, -6160399, 0, 0, -6225896, 0, 0, -6094863, 0, 0, -6160360, 0, 0, -6029327, 0, 0, -6094824, 0, 0, -5963791, 0, 0, -6029288, 0, 0, -5898255, 0, 0, -5963752, 0, 0, -5832719, 0, 0, -5898216, 0, 0, -5767183, 0, 0, -5832680, 0, 0, -5701647, 0, 0, -5767144, 0, 0, -5636111, 0, 0, -5701608, 0, 0, -5570575, 0, 0, -5636072, 0, 0, -5505039, 0, 0, -5570536, 0, 0, -5439503, 0, 0, -5505000, 0, 0, -5373967, 0, 0, -5439464, 0, 0, -5308431, 0, 0, -5373928, 0, 0, -5242895, 0, 0, -5308392, 0, 0, -5177359, 0, 0, -5242856, 0, 0, -5111823, 0, 0, -5177320, 0, 0, -5046287, 0, 0, -5111784, 0, 0, -4980751, 0, 0, -5046248, 0, 0, -4915215, 0, 0, -4980712, 0, 0, -4849679, 0, 0, -4915176, 0, 0, -4784143, 0, 0, -4849640, 0, 0, -4718607, 0, 0, -4784104, 0, 0, -4653071, 0, 0, -4718568, 0, 0, -4587535, 0, 0, -4653032, 0, 0, -4521999, 0, 0, -4587496, 0, 0, -4456463, 0, 0, -4521960, 0, 0, -4390927, 0, 0, -4456424, 0, 0, -4325391, 0, 0, -4390888, 0, 0, -4259855, 0, 0, -4325352, 0, 0, -4194319, 0, 0, -4259816, 0, 0, -4128783, 0, 0, -4194280, 0, 0, -4063247, 0, 0, -4128744, 0, 0, -3997711, 0, 0, -4063208, 0, 0, -3932175, 0, 0, -3997672, 0, 0, -3866639, 0, 0, -3932136, 0, 0, -3801103, 0, 0, -3866600, 0, 0, -3735567, 0, 0, -3801064, 0, 0, -3670031, 0, 0, -3735528, 0, 0, -3604495, 0, 0, -3669992, 0, 0, -3538959, 0, 0, -3604456, 0, 0, -3473423, 0, 0, -3538920, 0, 0, -3407887, 0, 0, -3473384, 0, 0, -3342351, 0, 0, -3407848, 0, 0, -3276815, 0, 0, -3342312, 0, 0, -3211279, 0, 0, -3276776, 0, 0, -3145743, 0, 0, -3211240, 0, 0, -3080207, 0, 0, -3145704, 0, 0, -3014671, 0, 0, -3080168, 0, 0, -2949135, 0, 0, -3014632, 0, 0, -2883599, 0, 0, -2949096, 0, 0, -2818063, 0, 0, -2883560, 0, 0, -2752527, 0, 0, -2818024, 0, 0, -2686991, 0, 0, -2752488, 0, 0, -2621455, 0, 0, -2686952, 0, 0, -2555919, 0, 0, -2621416, 0, 0, -2490383, 0, 0, -2555880, 0, 0, -2424847, 0, 0, -2490344, 0, 0, -2359311, 0, 0, -2424808, 0, 0, -2293775, 0, 0, -2359272, 0, 0, -2228239, 0, 0, -2293736, 0, 0, -2162703, 0, 0, -2228200, 0, 0, -2097167, 0, 0, -2162664, 0, 0, -2031631, 0, 0, -2097128, 0, 0, -1966095, 0, 0, -2031592, 0, 0, -1900559, 0, 0, -1966056, 0, 0, -1835023, 0, 0, -1900520, 0, 0, -1769487, 0, 0, -1834984, 0, 0, -1703951, 0, 0, -1769448, 0, 0, -1638415, 0, 0, -1703912, 0, 0, -1572879, 0, 0, -1638376, 0, 0, -1507343, 0, 0, -1572840, 0, 0, -1441807, 0, 0, -1507304, 0, 0, -1376271, 0, 0, -1441768, 0, 0, -1310735, 0, 0, -1376232, 0, 0, -1245199, 0, 0, -1310696, 0, 0, -1179663, 0, 0, -1245160, 0, 0, -1114127, 0, 0, -1179624, 0, 0, -1048591, 0, 0, -1114088, 0, 0, -983055, 0, 0, -1048552, 0, 0, -917519, 0, 0, -983016, 0, 0, -851983, 0, 0, -917480, 0, 0, -786447, 0, 0, -851944, 0, 0, -720911, 0, 0, -786408, 0, 0, -655375, 0, 0, -720872, 0, 0, -589839, 0, 0, -655336, 0, 0, -524303, 0, 0, -589800, 0, 0, -458767, 0, 0, -524264, 0, 0, -393231, 0, 0, -458728, 0, 0, -327695, 0, 0, -393192, 0, 0, -262159, 0, 0, -327656, 0, 0, -196623, 0, 0, -262120, 0, 0, -131087, 0, 0, -196584, 0, 0, -65551, 0, 0, -131048, 0, 0, -15, 0, 0, -65512, 0, 0, 65521, 0, 0, 24, 0, 0, 131057, 0, 0, 65560, 0, 0, 196593, 0, 0, 131096, 0, 0, 262129, 0, 0, 196632, 0, 0, 327665, 0, 0, 262168, 0, 0, 393201, 0, 0, 327704, 0, 0, 458737, 0, 0, 393240, 0, 0, 524273, 0, 0, 524274, 0, 0, 524275, 0, 0, 524276, 0, 0, 524277, 0, 0, 524278, 0, 0, 524279, 0, 0, 524280, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0 )
[connection signal="health_updated" from="Player" to="HealthBar" method="_on_Player_health_updated"]
[connection signal="max_health_updated" from="Player" to="HealthBar" method="_on_Player_max_health_updated"]
[connection signal="sendPoints" from="Enemy" to="PointCounter" method="_on_Enemy_sendPoints"]
[connection signal="sendPoints" from="Boss" to="PointCounter" method="_on_Enemy_sendPoints"]
[connection signal="sendPoints" from="EnemyRed" to="PointCounter" method="_on_Enemy_sendPoints"]
[connection signal="buffChange" from="BuffUI" to="Player" method="_on_BuffUI_buffChange"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="FadeOut" to="." method="_on_FadeOut_animation_finished"]
[connection signal="pressed" from="Clear/Popup/Button" to="." method="_on_Button_pressed"]
[connection signal="clearTrigger" from="PointCounter" to="Clear" method="_on_PointCounter_clearTrigger"]

[editable path="Enemy"]

[editable path="Boss"]

[editable path="EnemyRed"]
